--- a/project.properties
+++ b/project.properties
@@ -11,8 +11,8 @@
 #proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
-target=android-17
+target=android-20
 android.library=true
 android.library.reference.1=..\\ImageViewTouch
 android.library.reference.2=..\\HLListView
-android.library.reference.3=../Gpu-Image
+android.library.reference.3=../gpu_image
